# Aind.Behavior.VrForaging.Packaging

./: README.md  main.py  pyproject.toml
.github/workflows/: aind-behavior-vr-foraging-nwb.yml  aind-behavior-vr-foraging-packaging.yml
docs/knowledge/: index.md  log.md  overview.md
docs/knowledge/architecture/: continuous-and-event-streams.md  data-contract-and-versioning.md  index.md  nwb-packaging.md  pipeline.md  processor-abstraction.md  trial-table.md
docs/knowledge/conventions/: ci-cd-and-release.md  index.md  tooling-and-style.md
docs/knowledge/testing/: index.md  integration-tests.md  unit-tests.md
scripts/: example_parquet_pipeline.py  test_legacy_session.py
src/aind_behavior_vr_foraging_nwb/: models.py
src/aind_behavior_vr_foraging_nwb/processing/: _position_and_velocity.py  _trial_table.py  helper.py
src/aind_behavior_vr_foraging_packaging/: _base.py  models.py  pipeline.py
src/aind_behavior_vr_foraging_packaging/acquisition/: __init__.py  helper.py
src/aind_behavior_vr_foraging_packaging/nwb_file/: __init__.py
src/aind_behavior_vr_foraging_packaging/processing/: __init__.py  _create_processing_module.py  _events.py  _helper.py  _legacy_position_and_velocity.py  _legacy_trial_table.py  _licks.py  _position_and_velocity.py  _sniffing.py  _software_events.py  _trial_table.py
tests/: test_abstract_processor.py  test_nwb_session.py  test_pipeline.py
tests/integration/: .gitignore  conftest.py  datasets.yml  model.py  test_datasets.py
tests/processing/: test_events.py  test_legacy_trial_table.py  test_licks.py  test_software_events.py  test_trial_table.py
