[build-system]
requires = ["uv_build>=0.8.22"]
build-backend = "uv_build"

[project]
name = "aind-behavior-vr-foraging-nwb"
description = "A library of curricula for the VrForaging task."
authors = [
    {name = "Bruno Cruz", email = "bruno.cruz@alleninstitute.org"},
    ]
license = "MIT"
version = "0.0.0rc0"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
]
readme = {file = "README.md", content-type = "text/markdown"}

dependencies = [
    "aind-behavior-vr-foraging[data] >= 0.6.3",
    "aind-data-schema>2.2",
    "hdmf-zarr",
    "numpy>=2",
    "pandas",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.10",
    "pynwb",
    "scipy",
    "pydantic-settings",
    "aind-nwb-utils",
    "ndx-events",
    "aind-data-access-api>=1.9.2",
]

[project.urls]
Documentation = "https://allenneuraldynamics.github.io/Aind.Behavior.VrForaging.Nwb/"
Repository = "https://github.com/AllenNeuralDynamics/Aind.Behavior.VrForaging.Nwb/"
Issues = "https://github.com/AllenNeuralDynamics/Aind.Behavior.VrForaging.Nwb/issues"
Changelog = "https://github.com/AllenNeuralDynamics/Aind.Behavior.VrForaging.Nwb/releases"

[dependency-groups]

dev = [
    'ruff',
    'pytest',
    'pytest-cov',
    'codespell',
    'ty',
]

[tool.uv]
default-groups = ['dev']

[tool.ruff]
line-length = 120
target-version = 'py311'

[tool.ruff.lint]
extend-select = ['Q', 'RUF100', 'C90', 'I']
extend-ignore = []
mccabe = { max-complexity = 14 }
pydocstyle = { convention = 'google' }

[tool.codespell]
skip = '.git,*.pdf,*.svg,uv.lock'
ignore-words-list = 'nd'

[tool.pytest.ini_options]
addopts = "--strict-markers --tb=short --cov=src --cov-report=term-missing --cov-fail-under=0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[project.scripts]
curriculum = "aind_behavior_vr_foraging_nwb.cli:main"
